--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: >
   Everything about User Research, User Testing & Customer Insights.
 logo: "/assets/images/logo.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://blog.userlook.co" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
 
 name: 'userlook'
