--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: UserLook Blog
 email: userlookco@gmail.com
 description: >
   Everything about User Research, User Testing & Customer Insights.
-logo: "/assets/images/logo.jpg"
+logo: "/assets/images/logo.png"
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://blog.userlook.co" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
