--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: >
   Everything about User Testing & Customer Feedback.
 logo: "/assets/images/logo.png"
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://blog.userlook.co" # the base hostname & protocol for your site
+url: "https://blog.userlook.co" # the base hostname & protocol for your site
 paginate:	5 # The number of posts to show per page on your homepage
 
 name: 'UserLook'
