--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ paginate:	5 # The number of posts to show per page on your homepage
 
 name: 'Junu Yang'
 bio: >
-  Hey, I’m one of the founders of UserLook. I’m also a design and research nerd on a mission to help others build things people love. Meerkat is my spirit animal and I’m dreaming of farming humans, animals and robots 🐶🌱😊
+  Hey, I’m one of the founders of UserLook. I’m also a design and research nerd on a mission to help others build things people love. Meerkat is my spirit animal 🌱😸
 author_image: "/assets/images/author.png"
 twitter_username: userlookco
 github_username:  
